Usual spacing issue fix

--- a/src/features/d10/D10IdentifiedRoll.module.less
+++ b/src/features/d10/D10IdentifiedRoll.module.less
@@ -8,6 +8,7 @@
 .container {
   max-width: @screen-lg;
   margin: 0 auto;
+  padding: 0 12px;
 }
 
 .context {
@@ -17,13 +18,30 @@
 
 .buttons {
   display: flex;
+  flex-wrap: wrap;
   justify-content: flex-end;
 
   & > * {
     margin-right: 24px;
+    margin-bottom: 24px;
 
     &:last-child {
       margin-right: 0;
+    }
+  }
+}
+
+@media (max-width: @screen-sm) {
+  .container {
+    padding: 0;
+  }
+
+  .buttons {
+    justify-content: center;
+
+    & > * {
+      margin-left: 12px;
+      margin-right: 12px;
     }
   }
 }
